Fix header navbar alignment

--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -23,3 +23,7 @@ nav a.active {
     font-weight: bold;
     text-decoration: overline;
 }
+
+.brand h3 {
+    font-size: 1.5rem;
+}
